// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferMenu reducer tests returns initial state 1`] = `
Immutable.Map {
  "users": undefined,
  "resourceCapacity": undefined,
  "transferTabIndex": 0,
  "transferListsVisibleState": undefined,
  "transferLists": undefined,
  "agentsListVisibleState": undefined,
  "transferSearchInput": "",
  "showTransferDialpad": false,
  "focusedTransferItemIndex": -1,
  "queuesListVisibleState": undefined,
}
`;

exports[`TransferMenu reducer tests sets agentsListVisibleState 1`] = `
Immutable.Map {
  "agentsListVisibleState": true,
}
`;

exports[`TransferMenu reducer tests sets focusedTransferItemIndex 1`] = `
Immutable.Map {
  "focusedTransferItemIndex": 0,
}
`;

exports[`TransferMenu reducer tests sets queuesListVisibleState 1`] = `
Immutable.Map {
  "queuesListVisibleState": true,
}
`;

exports[`TransferMenu reducer tests sets transferLists 1`] = `
Immutable.Map {
  "transferLists": Immutable.List [
    Immutable.Map {
      "mockTransferListKey": "mockTransferListValue",
    },
  ],
}
`;

exports[`TransferMenu reducer tests sets transferListsListVisibleState 1`] = `
Immutable.Map {
  "transferListsVisibleState": Immutable.Map {
    "mockTransferListHiddenState": "mockValueTrue",
  },
}
`;

exports[`TransferMenu reducer tests sets transferSearchInput 1`] = `
Immutable.Map {
  "transferSearchInput": "mockTransferSearchInput",
}
`;

exports[`TransferMenu reducer tests sets transferTabIndex 1`] = `
Immutable.Map {
  "transferTabIndex": 1,
}
`;

exports[`TransferMenu reducer tests updates showTransferDialpad state 1`] = `
Immutable.Map {
  "showTransferDialpad": true,
}
`;
